# openfixture

./: .gitignore  .pre-commit-config.yaml  GenFixture.py  README.md  TestPin.dcm  TestPin.lib  convert_shape.py  cygwin.setpath  doDemo.bat  doDemo.sh  generate_kicad.py  genfixture.bat  genfixture.sh  openfixture.scad  osh_logo.dxf  pyproject.toml
3dmodels/: P058-Q1.step  P100-E2.step  P50-E1.step  P50-Q1.step  P75-E2.step  R100-1W-P100-A2.step  R100-1W-P100-A3.step  R100-1W-P100-B1.step  R100-1W-P100-E2.step  R100-1W-P100-E3.step  R100-1W-P100-G1.step  R100-1W-P100-G2.step  R100-2S-P100-A2.step  R100-2S-P100-A3.step  R100-2S-P100-B1.step  R100-2S-P100-E2.step  R100-2S-P100-E3.step  R100-2S-P100-G1.step  R100-2S-P100-G2.step  R100-2W-P100-A2.step  R100-2W-P100-A3.step  R100-2W-P100-B1.step  R100-2W-P100-E2.step  R100-2W-P100-E3.step  R100-2W-P100-G1.step  R100-2W-P100-G2.step  R100-3T-P100-A2.step  R100-3T-P100-A3.step  R100-3T-P100-B1.step  R100-3T-P100-E2.step  R100-3T-P100-E3.step  R100-3T-P100-G1.step  R100-3T-P100-G2.step  R100-4S-P100-A2.step  R100-4S-P100-A3.step  R100-4S-P100-B1.step  R100-4S-P100-E2.step  R100-4S-P100-E3.step  R100-4S-P100-G1.step  R100-4S-P100-G2.step  (+62 more)
demo_result/: yardstickone-Test-cache.lib  yardstickone-Test.kicad_pcb  yardstickone-Test.pro  yardstickone-Test.sch  yardstickone-fixture.dxf  yardstickone-outline.dxf  yardstickone-test.dxf  yardstickone-v2-fixture.dxf  yardstickone-validate.dxf  yardstickone.scad
templates/: kicad.pro
