[project]
dynamic = ["version"]
dependencies = ["ezdxf"]

[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[tool.flake8]
max-line-length = "120"
ignore = "W503,W511,E265,E501"

[tool.isort]
profile = "black"

[tool.codespell]
ignore-words-list = """
weerd,tht,master
"""
skip = """./.*,*/.metadata,*.xml"""
quiet-level=2
ignore-regex = '\\[fnrstv]'
builtin = "clear,rare,informal,usage,code,names"

[tool.setuptools]
include-package-data = false


[tool.mypy]
#files = ['xxx']
#reports = false
python_version = "3.9"
ignore_missing_imports = true
install_types = true
check_untyped_defs = true
show_error_codes = true
show_error_context = true
disable_error_code = [
   #"union-attr",
]

[tool.pylint.MAIN]
py-version = "3.9"

ignore = [
    #"tests",
]
persistent = false

[tool.pylint.BASIC]
class-const-naming-style = "any"
good-names = [
   "r",
]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "broad-exception-caught",
    "consider-using-f-string",
    "consider-using-with",
    "import-error",
    "invalid-name",
    "line-too-long",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-statements",
    "ungrouped-imports",
    "using-constant-test",
    "wrong-import-position",
]

[tool.pylint.FORMAT]
expected-line-ending-format = "LF"
